--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body{
 }
 
 .container-back-side-card>img{
-    width:25%;
+    width:10vw;
     cursor: pointer;
     margin-right:5%;
 }
@@ -65,7 +65,7 @@ h2{
     width: 100%;
     text-transform: uppercase;
     text-shadow: -3px 4px 30px#0011fd, 3px -4px 30px #00fc32;
-    font-size: 2em;
+    font-size: 1em;
     font-weight: 600;
     color: #00fc32
 }
@@ -91,7 +91,7 @@ span{
 }
 
 label{
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 label[for="difficult"]{
@@ -121,31 +121,23 @@ label[for="normal"]{
     justify-content: center;
     align-items: center;
     align-content: start;
-    width: 90vw;
-    height:100vh;
+    width: 80vw;
+    height:max-content;
     position: relative;
     margin:5% auto;
-    margin-bottom: 35%;
-    gap:3%
+    margin-bottom: 5%;
+    gap:9px;
 }
 
 .card{
-    width: 30%;
-    height: 25%;
+    width: 15vw;
+    height: 10vh;
     position: relative;
     box-shadow: rgba(0 , 0, 0, 0.35) 0px 10px 15px;
     transition:transform 500ms ease-in-out;
     transform-style: preserve-3d;
     background-color: #ffffff;
     cursor: pointer;
-}
-
-
-main img{
-    object-fit:cover;
-    object-position: center;
-    width: 100%;
-    height: 100%;
 }
 
 .side{
@@ -158,20 +150,33 @@ main img{
 
 .side--front{
     width: 100%;
-    transform:rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .side--back{
-    width: 100%;
+    transform: rotateY(0deg);
 }
+
+.flip{
+    transform:rotateY(180deg);
+}
+
+main img{
+    object-fit:cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+}
+
 
 .btn{
     display: block;
     border-radius: 5px;
-    padding: 10px;
-    width: 160px;
+    padding: 5px;
+    width: 200px;
     box-shadow: #00fc32 -5px 0px 15px;
     cursor:pointer;
+    font-family: "Frijole";
 }
 
 .btn-startGame,.btn-restartGame{
@@ -179,7 +184,7 @@ margin:0px auto;
 }
 
 .btn-restartGame{
-    margin-top:1%;
+    margin-top:20px;
     margin-bottom: 15%;
 }
 
@@ -208,6 +213,56 @@ margin:0px auto;
 }
 
 
+.modal-victory {
+    display: none; 
+    position: fixed; 
+    z-index: 2; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
+    background-color: rgba(0, 0, 0, 0.7); 
+}
+
+.modal-content {
+    background-color: #000000; 
+    margin: 15% auto; 
+    padding: 20px; 
+    border: 1px solid #b9b6b6; 
+    width: 80%; 
+    max-width: 500px; 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8); 
+    border-radius: 10px; 
+    text-align: center; 
+}
+
+.modal-content h2 {
+    margin: 0 0 50px;
+}
+
+.modal-content p {
+    margin: 0 0 20px;
+    color:#00fc32;
+}
+
+.modal-content btn-restartGame {
+    background-color: #4CAF50; 
+    color: white; 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    font-size: 16px; 
+}
+
+.btn:not(:disabled):hover {
+    transition:all 0.3s ease;
+    background-color: #45a049; 
+    color:white;
+}
+
+
 @media screen and (min-width:768px){
     h1{
         padding-top: calc(2*0.7em);
@@ -218,7 +273,6 @@ margin:0px auto;
         margin-top: 5%;
     }
     .container-back-side-card>img{
-        width: 12%;
         cursor: pointer;
         margin-right:5%;
     }
@@ -228,21 +282,54 @@ margin:0px auto;
     .compteur{
         width: 40%;
     }
+
+    .card-container{
+        width: 70vw;
+    }
 }
 
 @media  screen and (min-width:500px) and (max-width:767px){
     .container-back-side-card>img{
-        width:20%;
+        
         cursor: pointer;
         margin-right:5%;
     }
+
 }
+
+@media screen and (min-width:695px){
+    .card-container{
+        width: 60vw;
+    }
+}
+
+@media screen and (min-width:810px){
+    
+    .card{
+        width: 155px;
+        height: 220px;
+    }
+}
+
 
 @media screen and (min-width:1024px){
     .compteur{
         width: 30%;
-    }
+    }   
+}
 
+@media screen and (min-width:1350px){
+    .card{
+        width: 190px;
+        height: 280px;
+    }
+}
+
+@media screen and (min-width:2310px){
+    .card{
+        width: 220px;
+        height: 300px;
+    }
     .card-container{
         display: flex;
         flex-flow: row wrap;
@@ -250,14 +337,11 @@ margin:0px auto;
         align-items: center;
         align-content: start;
         width: 90vw;
-        height:30vh;
+        height:max-content;
         position: relative;
         margin:5% auto;
-        gap:1%
-    }
-
-    .card{
-        height: 40%;
+        margin-bottom: 3%;
+        gap:9px;
     }
 }
 
