--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,12 @@ body{
     margin-right:5%;
 }
 
+.container-back-side-card{
+    width: 80%;
+    margin: 0 0 0 12%;   
+}
+
+
 .container-difficult,
 .container-easy,
 .container-normal{
@@ -67,7 +73,7 @@ h2{
     text-shadow: -3px 4px 30px#0011fd, 3px -4px 30px #00fc32;
     font-size: 1em;
     font-weight: 600;
-    color: #00fc32
+    color: #00fc32;
 }
 
 h3{
@@ -121,7 +127,7 @@ label[for="normal"]{
     justify-content: center;
     align-items: center;
     align-content: start;
-    width: 80vw;
+    width: 100vw;
     height:max-content;
     position: relative;
     margin:5% auto;
@@ -130,8 +136,8 @@ label[for="normal"]{
 }
 
 .card{
-    width: 15vw;
-    height: 10vh;
+    width: 10vw;
+    height: 6vh;
     position: relative;
     box-shadow: rgba(0 , 0, 0, 0.35) 0px 10px 15px;
     transition:transform 500ms ease-in-out;
@@ -172,11 +178,23 @@ main img{
 .btn{
     display: block;
     border-radius: 5px;
-    padding: 5px;
     width: 200px;
     box-shadow: #00fc32 -5px 0px 15px;
     cursor:pointer;
     font-family: "Frijole";
+    background-color: #000; 
+    color: #4CAF50; 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    font-size: 16px;
+}
+
+.btn:not(:disabled):hover {
+    transition:all 0.3s ease;
+    background-color: #4CAF50; 
+    color:white;
 }
 
 .btn-startGame,.btn-restartGame{
@@ -221,47 +239,103 @@ margin:0px auto;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; 
-    background-color: rgba(0, 0, 0, 0.7); 
+    background-color: rgba(0, 0, 0, 0.8); 
 }
 
 .modal-content {
     background-color: #000000; 
     margin: 15% auto; 
     padding: 20px; 
-    border: 1px solid #b9b6b6; 
+    border: 1px solid #00fc32; 
     width: 80%; 
     max-width: 500px; 
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8); 
+    box-shadow: 0px 0px 10px rgba(97, 97, 97, 0.8); 
     border-radius: 10px; 
     text-align: center; 
 }
 
 .modal-content h2 {
     margin: 0 0 50px;
+    font-weight: bold;
+    font-size: 30px;
 }
 
 .modal-content p {
     margin: 0 0 20px;
     color:#00fc32;
+} 
+
+.modal-defeat{
+    display:none;
+    position: fixed;
+    z-index:2;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0 , 0, 0, 0.8);
 }
 
-.modal-content btn-restartGame {
-    background-color: #4CAF50; 
-    color: white; 
-    padding: 10px 20px; 
-    border: none; 
-    border-radius: 5px; 
-    cursor: pointer; 
-    font-size: 16px; 
+.modal-content-defeat{
+    color:red;
+    text-align: center;
+    width: 80%;
+    max-width:500px;
+    background-color:#000;
+    margin:15% auto;
+    padding:20px;
+    border:1px solid red;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(131, 130, 130, 0.8);
 }
 
-.btn:not(:disabled):hover {
-    transition:all 0.3s ease;
-    background-color: #45a049; 
-    color:white;
+.modal-content-defeat h2{
+    margin:0 0 30px;
+    color: inherit;
+    font-weight: bold;
+    font-size: 30px;
 }
 
+.modal-content-defeat p{
+    margin: 0 0 50px;
+    font-size: 20px;
+}
+
+
+
+@media screen and (min-width:426px){
+    .compteur{
+        width: 40%;
+    }
+
+    .card{
+        width: 10vw;
+        height: 7vh;
+    }
+}
+
+@media  screen and (min-width:500px){
+    .card{
+        height:10vh;
+        width: 10vw;
+    }
+
+    .card-container{
+        width: 80vw;
+    }
+
+}
+
+@media  screen and (min-width:700px){
+    .card{
+        width: 8vw;
+        height: 11vh;
+    }
+
+    .card-container{
+        width: 90vw;
+    }
+}
 
 @media screen and (min-width:768px){
     h1{
@@ -276,74 +350,62 @@ margin:0px auto;
         cursor: pointer;
         margin-right:5%;
     }
-}
-
-@media screen and (min-width:426px){
-    .compteur{
-        width: 40%;
-    }
 
     .card-container{
-        width: 70vw;
+        width: 80vw;
     }
-}
-
-@media  screen and (min-width:500px) and (max-width:767px){
-    .container-back-side-card>img{
-        
-        cursor: pointer;
-        margin-right:5%;
-    }
-
-}
-
-@media screen and (min-width:695px){
-    .card-container{
-        width: 60vw;
-    }
-}
-
-@media screen and (min-width:810px){
-    
     .card{
-        width: 155px;
-        height: 220px;
+        width: 7vw;
+        height: 11vh;
     }
 }
+
 
 
 @media screen and (min-width:1024px){
     .compteur{
         width: 30%;
-    }   
-}
-
-@media screen and (min-width:1350px){
+    }  
+    
     .card{
-        width: 190px;
-        height: 280px;
-    }
-}
-
-@media screen and (min-width:2310px){
-    .card{
-        width: 220px;
-        height: 300px;
+        width: 6vw;
+        height: 12vh;
     }
     .card-container{
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        align-items: center;
-        align-content: start;
-        width: 90vw;
-        height:max-content;
-        position: relative;
-        margin:5% auto;
-        margin-bottom: 3%;
-        gap:9px;
+        width: 65vw;
     }
 }
+
+@media screen and (min-width:1230px){
+    .card{
+        height: 16vh;
+        width: 7vw;
+    }
+    .card-container{
+        width: 70vw;
+    }
+}
+
+@media screen and (min-width:1500px){
+    .card{
+        height: 14vh;
+        width: 5vw;
+    }
+    .card-container{
+        width: 50vw;
+    }
+}
+
+@media screen and (min-width:1820px){
+    .card{
+        height: 14vh;
+        width: 5vw;
+    }
+    .card-container{
+        width: 50vw;
+    }
+}
+
 
 
 
